<resources>
    <string name="app_name">Musicness</string>

    <string name="blank_space">\u0020</string>
    <string name="error">Error</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
    </string>
    <string name="test">Test</string>
    <string name="favourite">Favorite</string>

    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="random_artists">Random artists</string>
    <string name="artist_item">Artist item</string>
    <string name="artist_photo">Artist photo</string>
    <string name="credits">Credits</string>
    <string name="refresh">Refresh</string>

    <string name="popular_songs">Popular songs</string>
    <string name="song_image">Song image</string>

    <string name="release_date">Release date</string>
    <string name="primary_artist">Primary artist</string>
    <string name="featured_artists">Featured artists</string>
    <string name="producers">Producers</string>
    <string name="writers">Writers</string>

    <string name="search_song">Search a song</string>
</resources>
