<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/song_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/song_app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/song_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/blank_space"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleGravity="center|start"
            app:expandedTitleMarginTop="64dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/song_toolbar_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"
                android:scaleType="centerCrop"
                android:contentDescription="@string/song_image"
                android:transitionName="song_toolbar_image"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/trending_gradient_shape"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/song_toolbar_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/song_toolbar_credits"
                    android:elevation="1dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:textColor="@android:color/white"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/song_toolbar_credits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:elevation="1dp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:textStyle="bold"
                    android:text="@string/credits"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:drawablePadding="4dp"
                    app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
            </RelativeLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/song_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include
        layout="@layout/content_song_details"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>